# beachhack-template

./: .gitignore  API_DOCUMENTATION.md  PRD.md  Prompt.md  Technical setup guide.md  UI.md  elevenlabs_store_tool.json  elevenlabs_tools.json  store_webhook_config.json  system_prompt.txt
aetheris-audio-visualizer/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json
aetheris-audio-visualizer/components/: DeformingGlobe.tsx  Overlay.tsx  TranscriptionLogs.tsx  VisualizerScene.tsx
backend/: .env.example  package-lock.json  package.json  server.js
backend/config/: database.js
backend/controllers/: ai.controller.js  call.controller.js  customer.controller.js  dashboard.controller.js  store.controller.js
backend/models/: Agent.js  Conversation.js  Customer.js  Store.js
backend/routes/: api.routes.js  elevenlabs.routes.js  twilio.routes.js
backend/scripts/: repair_data.js  update_stella_keypoints.js
backend/services/: aivoice.service.js  conversation.service.js  customer.service.js  (+6 more)
frontend/: package-lock.json  package.json
mlp/convoai/: Makefile  agent.db  docker-compose.yml  pyproject.toml
mlp/convoai/docs/: METRICS.md  metrics-ratio.md
mlp/convoai/scripts/: save_graphs.py
mlp/convoai/src/convoai/: __main__.py  config.py  models.py  tools.py
mlp/convoai/src/convoai/agent/: __init__.py  agent_llm.py  chat_routes.py  graph.py  prompts.py  state.py  tools.py  user_store.py
mlp/convoai/src/convoai/api/: app.py  routes.py
mlp/convoai/src/convoai/workflows/: extraction.py  facts.py
mlp/convoai/tests/: test_agent.py
(+35 files in other folders)
