[project]
name = "convoai"
version = "0.1.0"
description = ""
authors = [
    {name = "Ritesh Mane",email = "maneriteshh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langgraph-checkpoint-redis (>=0.3.3,<0.4.0)",
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "convoai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
